--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "url": "https://github.com/StartBootstrap/startbootstrap-creative.git"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.0.0",
         "bootstrap": "5.1.3"
     },
     "devDependencies": {
